# adventofcode

./: .gitignore  Dockerfile  README.md  advent_pb2.py  advent_pb2.pyi  adventofcode.sln  build.sh  go.mod  go.sum  main.go
.github/workflows/: tag.yml  test2015.yml  test2023.yml  test2024.yml  test2025.yaml  test2025.yml  upload-2015.yml  upload-2023.yml  upload-2024.yaml  upload-2025.yaml  upload-2026.yaml  upload-finder.yml  upload.yml
advent/2015/: day1.go
client/: client.go
deployment/: dashboard.yml  deploy.yml  deployment.yml  kustomization.yml  kustomize.yml  namespace.yml  service.yml  updates.yml
finder/: Dockerfile  finder.go  go.mod  go.sum
finder/deployment/: finder.yml
proposals/: november.md  years.md
proto/: Advent.cs  advent.pb.go  advent.proto  advent_grpc.pb.go  advent_pb.rb
server/: server.go  server_test.go
solvers/2015/: 2015.py  2015.py~  Dockerfile  advent_pb2.py  advent_pb2_grpc.py  day1.py  day1_test.py  day2.py  day2_test.py  requirements.txt
solvers/2016/: Dockerfile  Program.cs  README.md  adventofcode2016.csproj  main.cs  solver.csproj
solvers/2023/: Cargo.toml  Dockerfile  advent.proto  build.rs
solvers/2023/deployment/: deployment.yml
solvers/2023/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day20.rs  day22.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  server.rs
solvers/2024/: Dockerfile  Gemfile  day0.rb  day0_spec.rb  day1.rb  day10.rb  day10_spec.rb  day11.rb  day11_spec.rb  day12.rb  day12_spec.rb  day13.rb  day13_spec.rb  day15.rb  (+33 more)
(+57 files in other folders)
