[package]
name = "solver-2023"
version = "0.1.0"
authors = ["brotherlogic <brotherlogic@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# server binary
[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]

tonic = "0.10"
prost = "0.12"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10"

